--- a/equation/equation.xcodeproj/xcshareddata/xcschemes/R.xcscheme
+++ b/equation/equation.xcodeproj/xcshareddata/xcschemes/R.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "measure.temp_caseinsensitive_renameDebug.app"
+               BuildableName = "equation.temp_caseinsensitive_renameDebug.app"
                BlueprintName = "equation"
                ReferencedContainer = "container:equation.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "measure.temp_caseinsensitive_renameDebug.app"
+            BuildableName = "equation.temp_caseinsensitive_renameDebug.app"
             BlueprintName = "equation"
             ReferencedContainer = "container:equation.xcodeproj">
          </BuildableReference>
@@ -56,7 +56,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "measure.temp_caseinsensitive_renameDebug.app"
+            BuildableName = "equation.temp_caseinsensitive_renameDebug.app"
             BlueprintName = "equation"
             ReferencedContainer = "container:equation.xcodeproj">
          </BuildableReference>
@@ -75,7 +75,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "measure.temp_caseinsensitive_renameDebug.app"
+            BuildableName = "equation.temp_caseinsensitive_renameDebug.app"
             BlueprintName = "equation"
             ReferencedContainer = "container:equation.xcodeproj">
          </BuildableReference>
