--- a/measure2/measure2.xcodeproj/xcshareddata/xcschemes/D.xcscheme
+++ b/measure2/measure2.xcodeproj/xcshareddata/xcschemes/D.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "measure.temp_caseinsensitive_renameDebug.app"
+               BuildableName = "measure2.temp_caseinsensitive_renameDebug.app"
                BlueprintName = "measure2"
                ReferencedContainer = "container:measure2.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "measure.temp_caseinsensitive_renameDebug.app"
+            BuildableName = "measure2.temp_caseinsensitive_renameDebug.app"
             BlueprintName = "measure2"
             ReferencedContainer = "container:measure2.xcodeproj">
          </BuildableReference>
@@ -56,7 +56,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "measure.temp_caseinsensitive_renameDebug.app"
+            BuildableName = "measure2.temp_caseinsensitive_renameDebug.app"
             BlueprintName = "measure2"
             ReferencedContainer = "container:measure2.xcodeproj">
          </BuildableReference>
@@ -75,7 +75,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "measure.temp_caseinsensitive_renameDebug.app"
+            BuildableName = "measure2.temp_caseinsensitive_renameDebug.app"
             BlueprintName = "measure2"
             ReferencedContainer = "container:measure2.xcodeproj">
          </BuildableReference>
